# nixops-terraform

./: default.nix  pyproject.toml  shell.nix
nixops_terraform/: plugin.py  resources.py
nixops_terraform/nix/: default.nix  terraform.nix
