[tool.poetry]
name = "nixops_terraform"
version = "1.0"
description = "NixOps plugin for Terraform"
authors = ["Your Name <your.name@example.com>"]
license = "MIT"
include = [ "nixops_terraform/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {path = "../nixops"}
xmltodict = "^0.12.0"

[tool.poetry.plugins."nixops"]
terraform = "nixops_terraform.plugin"


[tool.poetry.dev-dependencies]
mypy = "^0.770"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
